added GET endpoints for batch, slot and era
